--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -2,6 +2,7 @@ body {
   margin-left: 25%;
   margin-right: 25%;
   margin-top: 5%;
+  text-align: center;
   font-family: "Open Sans", sans-serif;
 }
 
