--- a/app/stylesheets/app.css
+++ b/app/stylesheets/app.css
@@ -1,9 +1,15 @@
 body {
-  margin-left: 25%;
-  margin-right: 25%;
+  margin-left: 2%;
+  margin-right: 2%;
   margin-top: 5%;
   text-align: center;
   font-family: "Open Sans", sans-serif;
+}
+@media (min-width: 800px){
+  body {
+    margin-left: 25%;
+    margin-right: 25%;
+  }
 }
 
 label {
